--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
   <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <!-- Customize your theme here. -->
     <item name="android:statusBarColor">@android:color/black</item>
-    <item name="android:windowBackground">@android:color/black</item>
+    <item name="android:windowBackground">@color/greenLight</item>
     <item name="windowActionBar">false</item>
   </style>
 
